  26. For those using account system, can now register for an account from ANY page in the forum system (really an oversight)
  26. New GENERATEable themes in /resources/randreas/example.xml: orcs, trolls, and goblins.  Also, lots of work done to fill it all out.
  27. New DISABLE flags: IMC2, I3 -- alternative means to turn them off.  At runtime, it puts those systems into idle.
//TODO: disguise should check badnameslist
//TODO: export/import account/account data
//TODO: make the tech install skill!!! all put/remove commands should check msg.value() for pct chance/competence
//TODO: make components interact badly based on techlevel -- generators/batteries affect things they power, software affects controlled.
//      this encourages equality in tech level, which will bleed out into the comparative components (weapons, shields)
//TODO: retest private libs, private dbtables, private classes, private area objects, private players
//TODO: some way to reposition planets? esp relative to nearby ones
//TODO: create solar systems, esp stars.  planets should be thin areas, solar systems are triggered to load when players fly near enough.
//TODO: MoneyChanger/Banker behavior to discount currency by its distant origin (farther planet is from origin of currency, less its worth).
//TODO: personal scanner/tricorder software: mineral scanner, computer interface (with ship perhaps?)!
//TODO: entry systems for ships (default entry key card, voice code, identifying scanner)
//TODO: make ship sensor systems
//TODO: make tractor beam system -- esp important for pirates!
//TODO: make ship shield systems murder motel again -- some good against phasers, some torpedos, some lasers
//TODO: make ship phaser, laser systems murder motel again
//TODO: make ship torpedo launchers and torpedo containers
//TODO: make ship impulse and warp engines
//TODO: make ship dampeners
//TODO: engines should have max turn thrust, different from max thrust