@@ -1571,10 +1571,12 @@ ACCMSGS=OFF
 # Disables non-archons from logging in.  This puts your MUD into a maintenace
 # mode.  The text file resources/text/offline.txt is shown to them.
 #
-# NEWPLAYERS
+# NEWPLAYERS, NEWCHARACTERS
 # Disables the ability of those without accounts to create their own
 # players at login.  Be sure to put something in your intro.txt to let
-# folks know how their can get accounts!
+# folks know how their can get accounts!  If you are using the common
+# account system, you can disable NEWCHARACTERS also to disable both account
+# and character creation.
 #
 # PASSIVEAREAS
 # Disables the way the system renders standard-mobile mobs immobile, and stops
